kubernetes/apps/selfhosted/focalboard/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: focalboard
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: focalboard
  egress:
    # PostgreSQL
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres-pgbouncer
            postgres-operator.crunchydata.com/cluster: postgres
            k8s:io.kubernetes.pod.namespace: database
        - matchLabels:
            app.kubernetes.io/name: crunchy-postgres
            postgres-operator.crunchydata.com/cluster: postgres
            k8s:io.kubernetes.pod.namespace: database
      toPorts:
        - ports:
            - port: "5432"
              protocol: TCP
